Fix spacing around date

--- a/css/main.scss
+++ b/css/main.scss
@@ -76,6 +76,7 @@ a:hover   { color: #6CB8F3; }
   color: #555;
   font-size: 70%;
   float: right;
+  margin-left: 20px;
 }
 
 .postDate {
